k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eduvantage-service
spec:
  selector:
    app: eduvantage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
